# remote-mcp

./: LICENSE  README.md  mcp_server.py  prize_tool.py  pyproject.toml  temp_tool.py
